erDiagram
    users {
        SERIAL id
        VARCHAR username
        TIMESTAMP created_at
        %% UNIQUE (username)
    }
    media_types {
        SERIAL id
        VARCHAR name
        TIMESTAMP created_at
        %% UNIQUE (name)
    }
    medias {
        SERIAL id
        VARCHAR title
        INTEGER media_type_id
        TIMESTAMP created_at
        %% UNIQUE (title, media_type_id)
    }
    users_medias {
        INTEGER user_id
        INTEGER media_id
        TIMESTAMP added_at
        %% PRIMARY KEY (user_id, media_id)
    }

    users_medias }o--|| users : "user_id"
    users_medias }o--|| medias : "media_id"
    medias }o--|| media_types : "media_type_id"